# lanshare-rs

./: .gitignore  Cargo.toml  README.md  Todo.md
lanshare-api/: Cargo.toml
lanshare-api/src/: lib.rs
lanshare-app/: Cargo.toml
lanshare-app/src/use_cases/: mod.rs  receive_file.rs  send_file.rs
lanshare-cli/: Cargo.toml
lanshare-cli/src/: main.rs
lanshare-core/: Cargo.toml
lanshare-core/src/: discovery_manager.rs  lib.rs  server.rs  storage.rs  transaction.rs
lanshare-discovery/: Cargo.toml
lanshare-discovery/examples/: mdns_service.rs
lanshare-discovery/src/: adapter.rs  discovery_manager.rs  events.rs  lib.rs  peer.rs  registry.rs  service.rs
lanshare-domain/: Cargo.toml
lanshare-domain/src/: error.rs  lib.rs  models.rs  ports.rs
lanshare-ipc/: Cargo.toml
lanshare-ipc/src/: error.rs  lib.rs  message.rs  server.rs
lanshare-network/: Cargo.toml
lanshare-network/src/: adapter.rs
lanshare-proto/: Cargo.toml
lanshare-proto/src/: codec.rs  error.rs  file_message.rs  lib.rs  message_header.rs  messages.rs
lanshare-rs/: Cargo.toml
lanshare-rs/src/: main.rs
lanshare-storage/: Cargo.toml
lanshare-storage/src/: adapter.rs  hash.rs  lib.rs  transaction.rs
lanshare-tests/: Cargo.toml
storage/final/: test2.docx
