[package]
name = "lanshare-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lanshare-proto = { path = "../lanshare-proto" }
uuid = { version = "1.18.1", features = ["v4"] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "net"] }

