[package]
name = "lanshare-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

lanshare-domain = { path = "../lanshare-domain" }
lanshare-discovery = { path = "../lanshare-discovery" }
lanshare-storage = { path = "../lanshare-storage" }
lanshare-network = { path = "../lanshare-network" }
lanshare-app = { path = "../lanshare-app" }